syntax = "proto3";

package com.coralogix.extensions.v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";

import "protoc-gen-openapiv2/options/annotations.proto";

enum TargetDomain {
  reserved 5;
  reserved "LOGS_TO_METRICS";

  ACTION = 0;
  ALERT = 1;
  ENRICHMENT = 2;
  GRAFANA_DASHBOARD = 3;
  KIBANA_DASHBOARD = 4;
  PARSING_RULE = 6;
  SAVED_VIEW = 7;
  CX_CUSTOM_DASHBOARD = 8;
  METRICS_RULE_GROUP = 9;
  EVENTS_TO_METRICS = 10;
  ALERT_V3 = 11;
}

message ExtensionItemBinary {
  enum BinaryType {
    PREVIEW_IMAGE = 0;
    KIBANA_DASHBOARD_DEFINITION = 1;
    GRAFANA_DASHBOARD_DEFINITION = 2;
    ENRICHMENT_CSV = 3;
    CX_CUSTOM_DASHBOARD_DEFINITION = 4;
  }

  BinaryType type = 1;
  google.protobuf.StringValue data = 2;
  google.protobuf.StringValue file_name = 3;
}

message ExtensionItem {
  reserved 8;
  reserved "internal_id";
  enum PermissionResource {
    UNKNOWN = 0;
    ACTION = 1;
    ALERT = 2;
    CUSTOM_ENRICHMENT = 3;
    GEO_ENRICHMENT = 4;
    SECURITY_ENRICHMENT = 5;
    RESOURCE_CLOUD_METADATA_ENRICHMENT = 6;
    GRAFANA_DASHBOARD = 7;
    KIBANA_DASHBOARD = 8;
    PARSING_RULE = 9;
    SAVED_VIEW = 10;
    CX_CUSTOM_DASHBOARD = 11;
    METRICS_RULE_GROUP = 12;
    SPAN_EVENTS_TO_METRICS = 13;
    LOGS_EVENTS_TO_METRICS = 14;
  }

  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue description = 3;
  TargetDomain target_domain = 4;
  google.protobuf.Struct data = 5;
  repeated ExtensionItemBinary binaries = 6;
  google.protobuf.BoolValue is_mandatory = 7;
  PermissionResource permission_resource = 9;
  google.protobuf.StringValue extended_internal_id = 10;
  google.protobuf.StringValue unique_id = 11;
}

message ItemCounts {
  google.protobuf.UInt32Value actions = 1;
  google.protobuf.UInt32Value alerts = 2;
  google.protobuf.UInt32Value custom_dashboards = 3;
  google.protobuf.UInt32Value enrichments = 4;
  google.protobuf.UInt32Value events_to_metrics = 5;
  google.protobuf.UInt32Value grafana_dashboards = 6;
  google.protobuf.UInt32Value kibana_dashboards = 7;
  google.protobuf.UInt32Value metrics_rule_group = 8;
  google.protobuf.UInt32Value parsing_rules = 9;
  google.protobuf.UInt32Value saved_views = 10;
}

message IntegrationDetail {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue link = 2;
}

message ExtensionBinary {
  enum BinaryType {
    KIBANA_INDEX_PATTERN = 0;
  }

  BinaryType type = 1;
  google.protobuf.StringValue data = 2;
}

message ChangelogEntry {
  google.protobuf.StringValue version = 1;
  google.protobuf.StringValue description_md = 2;
}

message Deprecation {
  google.protobuf.StringValue reason = 1;
  repeated google.protobuf.StringValue replacement_extensions = 2;
}

message ExtensionRevision {
  google.protobuf.StringValue version = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.StringValue excerpt = 3;
  repeated google.protobuf.StringValue labels = 4;
  repeated IntegrationDetail integration_details = 5;
  repeated ExtensionItem items = 6;
  repeated ExtensionBinary binaries = 7;
  repeated ExtensionItem permission_denied_items = 8;
  google.protobuf.BoolValue is_testing = 9;
}

message Extension {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue image = 3;
  google.protobuf.StringValue dark_mode_image = 4;
  repeated ExtensionRevision revisions = 5;
  google.protobuf.BoolValue is_hidden = 6;
  repeated string integrations = 7;
  repeated google.protobuf.StringValue keywords = 8;
  repeated ExtensionRevision permission_denied_revisions = 9;
  repeated ChangelogEntry changelog = 10;
  Deprecation deprecation = 11;
}

// Extension details for ingestion
message ExtensionData {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "ExtensionData"
      description: "Response to list all extensions"
      required: []
    }
  };
  google.protobuf.StringValue id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"076f4188-05e0-4ed3-afeb-653ad182ccb7\""}];
  google.protobuf.StringValue name = 2  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"I love chocolate\""}];
  google.protobuf.StringValue description = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"Chocolate is full of love\""}];
  google.protobuf.StringValue excerpt = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"Chocolate is full of love\""}];
  google.protobuf.StringValue image = 5 ;
  google.protobuf.StringValue dark_mode_image = 6;
  repeated google.protobuf.StringValue labels = 7 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "[\"cocoa\",\"sugar\"]"}];
  google.protobuf.StringValue version = 8 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"v1.0.13\""}];
  repeated ExtensionItemData items = 9;
  repeated IntegrationDetail integration_details = 10;
  google.protobuf.BoolValue is_hidden = 11 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "false"}];
  repeated ExtensionBinary binaries = 12;
  repeated string integrations = 13;
  repeated google.protobuf.StringValue keywords = 14;
  repeated ChangelogEntry changelog = 15;
  Deprecation deprecation = 16;
}

message ExtensionItemData {
  google.protobuf.StringValue name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"Low cocoa content\""}];
  google.protobuf.StringValue description = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"Less than 60% cocoa\""}];
  TargetDomain target_domain = 3;
  google.protobuf.Struct data = 4;
  repeated ExtensionItemBinary binaries = 5;
  google.protobuf.BoolValue is_mandatory = 6 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "true"}];
  google.protobuf.Int32Value internal_id = 7;
  google.protobuf.StringValue unique_id = 8;
  ExtensionItem.PermissionResource permission_resource = 9;
}